[gd_scene load_steps=5 format=3 uid="uid://dws7irhbqmomu"]

[ext_resource type="PackedScene" uid="uid://covniifh0ij4j" path="res://scenes/ui/card_menu_ui.tscn" id="1_axewt"]
[ext_resource type="Script" path="res://scenes/ui/card_pile_view.gd" id="1_fjqwr"]
[ext_resource type="Resource" uid="uid://dyyfi3rcfxyug" path="res://characters/warrior/warrior_starting_deck.tres" id="2_1fhlg"]

[sub_resource type="LabelSettings" id="LabelSettings_gcrwt"]
font_size = 12

[node name="CardPileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjqwr")
card_pile = ExtResource("2_1fhlg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard Pile"
label_settings = SubResource("LabelSettings_gcrwt")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="Cards" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 10
columns = 6

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer2" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer3" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer4" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer5" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer5" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer6" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer6" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer7" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer7" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer8" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer8" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer9" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer9" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer10" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer10" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer11" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer11" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer12" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer12" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer13" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer13" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer14" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer14" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer15" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer15" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer16" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer16" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer17" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer17" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CenterContainer18" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards/CenterContainer18" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 14)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 22.0
grow_horizontal = 0
text = "Back"

[node name="TooltipPopup" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TooltipPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipCard" type="CenterContainer" parent="TooltipPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="CardMenuUI" parent="TooltipPopup/VBoxContainer/TooltipCard" instance=ExtResource("1_axewt")]
layout_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="TooltipPopup/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/line_separation = 3
bbcode_enabled = true
text = "Card description Card description Card description Card description Card description"
fit_content = true
scroll_active = false

[connection signal="gui_input" from="TooltipPopup" to="." method="_on_tooltip_popup_gui_input"]
